# rpb

./: .env  .gitignore  README.md  main.py  manage.py  passwords.txt  pyproject.toml  requirements.txt  schema.yml
api/: admin.py  exceptions.py  middleware.py  urls.py
api/migrations/: 0001_initial.py  0002_alter_report_created_and_more.py  0002_alter_report_event_group.py
api/models/: __init__.py  event.py  job.py  report.py
api/serializers/: __init__.py  event.py  job.py  link.py  report.py
api/tests/: test_health.py
api/views/: __init__.py  core.py  fireant_json.py  link.py  report.py
celery/queue/: 108658539_feb52d26-62a3-4978-92d1-7bbac89e328d.celery.msg
docs/: CELERY_SETUP.md
frontend/: urls.py  views.py
frontend/templates/: home.html  login.html  register.html
frontend/templates/components/: nav.html  styles.html
project/: celery.py  db_router.py  routers.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
project/management/: backup_db.py
project/management/commands/: run_celery.py  run_celery_beat.py
project/settings/: base.py  dev.py  prod.py
project/templates/: base.html  layout.html  token_generator.html
project/templates/components/: nav.html
reporting/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
reporting/templates/: home.html  login.html  nav.html  register.html  token_generator.html
requirements/: base.txt  dev.txt  prod.txt
scripts/: backup.py  jwt_generation.py  start_celery.bat  start_celery.py  stop_celery.bat  stop_celery.py
