[project]
name = "reporting-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cronitor>=4.7.1",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "django-seed>=0.3.1",
    "django-unfold>=0.59.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "pymemcache>=4.0.0",
]

[tool.basedpywright]

